Assets/css/stylesheet.css
:root {
    --bg-color: wheat;
    --dark-color: sienna;
    --header-font: 'Koulen';
    --header-fnt-color: wheat;
    --body-font: 'Radio Canada';
}

/* Header Formatting */
header {
    height: 120px;
    padding: 15px;
    text-align: center;
    font-family: var(--header-font);
    background-color: var(--dark-color);
    color: var(--header-fnt-color);
}

/* Nav formatting */
nav {
    /* adds space between title + nav */
    padding: 30px;
    /* font-family for nav lists */
    font-family: var(--header-font);
}

/* Nav listings formatting */
nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    font-size: 20px;
}

/* list URL formatting */
li a {
    /* list URL color = turquoise */
    color: mediumturquoise;
    /* list URL has no decoration */
    text-decoration: none;
}

/* Body font & colors */
body {
    /* background color */
    background-color: var(--bg-color);
    /* font family */
    font-family: var(--body-font);
}

/* h2 formatting */
h2 {
    /* font family for h2 */
    font-family: var(--header-font);
    /* adding padding around h2 */
    padding: 30px;
    /* h2 font color */
    color: var(--dark-color);
    /* h2 font size */
    font-size: 35px;
}

/* paragraph formatting */
p {
    /* width of paragraph */
    width: 100%;
    /* aligning paragraph text to center */
    text-align: center;
    /* paragraph font family */
    font-family: var(--body-font);
    /* paragraph padding 10px top/bottom */
    padding: 10px;
    /* paragraph line height 1.5x front size */
    line-height: 1.5rem;
    /* paragraph color is black */
    color: black;
}

/* Figure formatting */
figure#First-Project {
    flex-basis: 100%;
    width: 100%;
    height: 100%;
    position: relative;
    text-align: center;
    color: white;
}

.Content {
    display: flex;
    flex-wrap: wrap;
}

figure.Other-Projects {
    position: relative;
    text-align: center;
    color: white;
    flex-basis: 50%;
    width: 50%;
    height: 500px;
}

figure.Other-Projects img {
    width: 100%;
    height: 100%;
    object-fit: contain;

}

/* h3 formatting */
h3 {
    /* h3 alignment = center */
    text-align: center;
    /* h3 padding is 20px */
    padding: 20px;
    /* h3 font family */
    font-family: var(--header-font);
    /* h3 font size */
    font-size: 30px;
    /* font color */
    color: var(--bg-color);
    /* background color */
    background-color: var(--dark-color);
}

/* h4 formatting */
h4 {
    /* h4 centered */
    text-align: center;
    /* h4 font size = 16px */
    font-size: 25px;
    /* h4 font family */
    font-family: var(--header-font);
}

footer {
    text-align: center;
    font-size: 20px;
    padding: 20px;
}

.Title {
    border-right-color: var(--dark-color);
    border-right-width: 2px;
    border-right-style: solid;
}

.About-Content img {
    display: flex;
    flex-wrap: wrap;
    flex-basis: 100%;
    margin-left: auto;
    margin-right: auto;
    height: auto;
    border-radius: 400px;
    padding: 10px;
}

.About-Me {
    font-family: var(--header-font);
    display: right;
}



.First-Project {
    width: 100%;
    height: auto;
}

.Other-Projects {
    flex-basis: 50%;
    max-width: 100%;
    max-height: auto;
    padding: 10px;
}

.article {
    position: absolute;
    bottom: 8px;
    left: 8px;
    font-size: 10px;
    background-color: turquoise;
    padding: 10px;
}

.Info {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 100%;
    background-color: var(--dark-color);
    padding: 20px;
    color: var(--bg-color);
    width: 100%;
}

/* Media Query + Responsiveness */
@media screen and (max-width: 992px) {
    main,
    nav {
        flex-direction: column;
    }
  }

@media screen and (max-width: 768px) {
    main,
    nav {
        flex-direction: column;
    }
  }

  @media screen and (max-width: 360px) {
    main,
    nav {
        flex-direction: column;
    }
  }

